[workspace]
members = ["src/libkrun"]
exclude = ["examples/gtk_display"]
resolver = "2"

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"
lto = true

[patch.crates-io]
nitro-enclaves = { git = "https://github.com/virtee/nitro-enclaves/", rev = "e93b2f2258b363dd59fa11f08cf11f3286280a5e" }